2006-11-26  Don Allingham  <don@gramps-project.org>
	* src/docgen/ODFDoc.py: fix registration

2006-11-25  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: remember window size
	* src/Editors/_EditAddress.py: remember window size
	* src/Editors/_EditSecondary.py: remember window size
	* src/Editors/_EditLdsOrd.py: remember window size
	* src/Editors/_EditReference.py: remember window size
	* src/Editors/_EditUrl.py: remember window size
	* src/Editors/_EditRepoRef.py: remember window size
	* src/Editors/_EditAttribute.py: remember window size
	* src/Editors/_EditPersonRef.py: remember window size
	* src/Editors/_EditLocation.py: remember window size
	* src/Editors/_EditMediaRef.py: remember window size
	* src/Editors/_EditEventRef.py: remember window size
	* src/Editors/_EditName.py: remember window size
	* src/glade/gramps.glade: remember window size
	* data/gramps.schemas.in: remember window size

2006-11-25  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* src/GrampsLogger/_ErrorReportAssistant.py
	(_get_sys_information): Report BSDDB version.
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB.load): Use
	per-database environment dirs, under ~/.gramps/env dir.
	* src/const.py.in (env_dir): Add new variable.

2006-11-25  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: remember editor size
	* src/Editors/_EditPlace.py: remember editor size
	* src/Editors/_EditSource.py: remember editor size
	* src/Editors/_EditPerson.py: remember editor size
	* src/Editors/_EditMedia.py: remember editor size
	* src/Editors/_EditRepository.py: remember editor size
	* src/Editors/_EditEvent.py: remember editor size
	* src/glade/gramps.glade: remember editor size
	* data/gramps.schemas.in: remember editor size
	* src/GrampsDb/_ReadGedcom.py: handle _UID for FAM structure (#0000505)
	* src/docgen/ODFDoc.py: don't query mime type for ODT, since some systems